[workspace]
members = ["sys"]

[package]
name = "whisper-rs"
version = "0.3.0"
edition = "2021"
description = "Rust bindings for whisper.cpp"
license = "Unlicense"
documentation = "https://docs.rs/whisper-rs"
repository = "https://github.com/tazz4843/whisper-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs-sys = { path = "sys", version = "0.2" }

[dev-dependencies]
ac-ffmpeg = { git = "https://github.com/angelcam/rust-ac-ffmpeg.git", rev = "3b963de6bcaf3b572612f1783ecb343b6884b3c0" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[features]
simd = []

[package.metadata.docs.rs]
features = ["simd"]
